pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: G:\My Drive\Training Courses\nucamp_backend\Python\3-DevOps\week4\Kompose\kompose.exe convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: G:\My Drive\Training Courses\nucamp_backend\Python\3-DevOps\week4\Kompose\kompose.exe convert
        kompose.version: 1.23.0 (bc7d9f4f)
      creationTimestamp: null
      labels:
        io.kompose.network/nunet: "true"
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED
              value: "False"
            - name: PGADMIN_CONFIG_SERVER_MODE
              value: "False"
            - name: PGADMIN_CONFIG_UPGRADE_CHECK_ENABLED
              value: "False"
            - name: PGADMIN_DEFAULT_EMAIL
              value: admin@example.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: admin123
            - name: PGADMIN_LISTEN_PORT
              value: "5433"
          image: dpage/pgadmin4:6.4
          name: pgadmin-container
          ports:
            - containerPort: 5433
          resources: {}
      restartPolicy: Always
status: {}
