pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: G:\My Drive\Training Courses\nucamp_backend\Python\3-DevOps\week4\Kompose\kompose.exe convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: pg
  name: pg
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: pg
status:
  loadBalancer: {}
